traefik/1-namespace.yaml
kind: Namespace
apiVersion: v1
metadata:
  name: traefik-system
  labels:
    name: traefik-system
