traefik/3-traefik-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: traefik
  namespace: traefik-system
spec:
  type: NodePort
  ports:
    - protocol: TCP
      name: web
      port: 8000
      targetPort: 8000
      nodePort: 30080
    - protocol: TCP
      name: websecure
      port: 4443
      targetPort: 4443
      nodePort: 30443
    - protocol: TCP
      name: admin
      targetPort: 8080
      port: 8080
  selector:
    app: traefik
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: traefik-dashboard
  namespace: traefik-system
spec:
  entryPoints:
    - web
    - websecure
  routes:
    - match: Host(`traefik.nanodoo.com`) # Hostname to match
      kind: Rule
      services: # Service to redirect requests to
        - name: api@internal # Special service created by Traefik pod
          kind: TraefikService
      middlewares:
        - name: auth
